Fix display of full screen sliders on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -572,6 +572,20 @@ blockquote {
         max-height: none;
     }
 
+    .book-section-comparison-slider-fullscreen-on {
+        border: none !important;
+    }
+
+    .book-section-comparison-slider-container-on {
+        border: 7px #cccccc solid !important;
+        border-radius: 10px !important;
+    }
+
+    .book-section-comparison-before-on {
+        max-height: none !important;
+        margin: 0 !important;
+    }
+
     .book-section-comparison-button-container {
         margin-left: 10px;
     }
